[package]
name = "issuu-api-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "*", features = ["json"] }
dotenv = "*"
tokio = { version = "1", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
thiserror = "*"
